--- a/src/app/layout/question/question-new/question-new.component.html
+++ b/src/app/layout/question/question-new/question-new.component.html
@@ -22,7 +22,7 @@
         <select mdbInput *ngIf="attributeOption != '' " class="form-control" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;"
             [(ngModel)]="attributeValueOption">
             <option value="" hidden>Select</option>
-            <option [value]="attributeValue.id" *ngFor="let attributeValue of attributeValues">{{attributeValue.value}}
+            <option [value]="attributeValueString" *ngFor="let attributeValueString of attributeValuesString">{{attributeValueString}}
             </option>
         </select>
         <button *ngIf="attributeValueOption != '' " (click)="addAttributeValue(attributeValueOption)" style="margin-top: 3px; margin-bottom: 4px; background-color: rgb(0, 0, 120); border-radius: 20%; color: rgb(248, 248, 248);"> + </button>
@@ -31,9 +31,9 @@
 
     <mat-form-field class="chip-list">
         <mat-chip-list #chipList aria-label="Fruit selection">
-            <mat-chip *ngFor="let selectedValue of selectedValues" [selectable]="selectable" [removable]="removable"
-                (removed)="remove(selectedValue)">
-                {{selectedValue.value}}
+            <mat-chip *ngFor="let selectedValueString of selectedValuesString" [selectable]="selectable" [removable]="removable"
+                (removed)="remove(selectedValueString)">
+                {{selectedValueString}}
                 <mat-icon class="myRemove" matChipRemove *ngIf="removable">x</mat-icon>
             </mat-chip>
         </mat-chip-list>
