commit login button

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
       </mat-card-content>
       
       <p *ngIf="error">{{this.msg}}</p>
-      <button type="button" class="loginButton btn btn-outline-info w-100 mt-2" (click)="login()">Log in</button>
+      <button type="button" class="loginButton btn btn-outline-info w-100 mt-2" (click)="login()"><span>Login</span></button>
     </form>
   </mat-card>
   
