--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,8 +19,6 @@
   border: none;
   background-color:rgb(0, 0, 120);
   outline: none;
-
-
 }
 
 
@@ -121,7 +119,8 @@
   white-space: nowrap;
   direction: ltr;
   color: rgb(255, 255, 255);
-  align-content: center;
+  
+  vertical-align:middle;
 
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
@@ -134,6 +133,11 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+
+.fontsize{
+  font-size: 100%;
+}
+
 
 .material-icons1 {
   font-family: 'Material Icons';
@@ -149,6 +153,7 @@
   direction: ltr;
   color: red;
   align-content: center;
+  vertical-align:center;
 
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
