EditQuestion/RemoveQuestion Icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@ rel="stylesheet">
       <span class="fontsize navbar-text  text-white">
          {{accountApi.getCurrentName()}}
 
-         <i class="material-icons">how_to_reg</i>
+         <i class="material-icons">account_circle</i>
       </span>
 
       <button class="logOutButton" routerLink="login" (click)="logout()">
