--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,6 +54,8 @@
     padding-left: 30px;
     padding-right: 30px;
     outline: none;
+    margin-right: -10px;
+    margin-left: -15px;
     
     
     
