--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -23,22 +23,23 @@ body {
 /* navbar */
 .ng-sidebar {
   
-  background:rgb(13, 30, 207);
+  background:rgb(0, 0, 22);
   width: 20%;
   padding: 0;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
-  opacity: 100%;
+  opacity: 95%;
   
 }
 
 .selectors { 
-
+  background:rgb(0, 0, 22);
   padding: 10%;
   width: 100%;
   text-align:left;
   color:rgb(25, 196, 194);
-  background-color: rgb(13, 30, 207);
+  opacity: 95%;
+  //background-color: rgb(13, 30, 207);
 }
 
 
