--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -2,50 +2,33 @@
 
         <!-- A sidebar -->
         <ng-sidebar [(opened)]="_opened" position="left" [mode]="'push'">
-                <h3>Selectors</h3>
-
+                <h3>Filter By:</h3>
                 <div class="selectors container">
-                        <div>
-                                <label class="font-weight-bold text-center mt-2">Technology</label>
-                                <select mdbInput class="form-control w-100">
-                                        <option [value]="tech" *ngFor="let tech of Technology">{{tech}}
-                                        </option>
-                                </select>
-                        </div>
-                        <div>
-                                <label class="font-weight-bold text-center mt-2">Difficulty</label>
-                                <select mdbInput class="form-control w-100">
-                                        <option [value]="dif" *ngFor="let dif of Difficulty">{{dif}}
-                                        </option>
-                                </select>
-                        </div>
-                        <div>
-                                <label class="font-weight-bold text-center mt-2">Roles</label>
-                                <select mdbInput class="form-control w-100">
-                                        <option [value]="roles" *ngFor="let roles of Roles">{{roles}}
+                        <div *ngFor="let attribute of attributes; let i = index">
+                                <label class="font-weight-bold text-center mt-2">{{attribute.category}}</label>
+                                <select mdbInput (change)= "filterQuestions(fileredValue)" class="form-control w-100">
+                                        <option value="" hidden>Select</option>
+                                        <option [value]="filteredValue" *ngFor="let filteredValue of filteredValues[i]">
+                                                {{filteredValue}}
                                         </option>
                                 </select>
                         </div>
                 </div>
-
         </ng-sidebar>
 
         <!-- Page content -->
         <div ng-sidebar-content>
                 <section class="container">
-
                         <h2 class="text-white" translate> New Question
-
                                 <button type="button" class="QuestButton" (click)="openCreateModal()">
                                         <fa-icon [icon]="iconNew"></fa-icon>
                                 </button>
-                                <br> 
+                                <br>
                                 <div>
                                         <button class="pdfButton" (click)="generatePdf()">
-                                              <span>Export PDF</span>
+                                                <span>Export PDF</span>
                                         </button>
                                 </div>
-
                                 <!--  <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
                                         Update Questions
                                 </button> -->
@@ -59,24 +42,22 @@
                                 </tr>
                                 <tr *ngFor="let question of questions$ | async">
                                         <td *ngFor="let col of indexTable; let i = index">
-                                                
                                                 <ng-container *ngIf="i==0">
                                                         <span *ngFor="let attr of question[col]">{{attr.value}}</span>
                                                 </ng-container>
                                                 <ng-container *ngIf="i>0">
-                                                       
                                                         {{question[col]}}
                                                 </ng-container>
-                                               
                                         </td>
                                         <td style="width:150px">
-                                        <button type="button" class="btn btn-outline-info mr-2" (click)="editQuestion(question.id)">Edit</button>
-                                        <button type="button" class="btn btn-outline-danger" (click)="deleteQuestion(question.id)">X</button>
+                                                <button type="button" class="btn btn-outline-info mr-2"
+                                                        (click)="editQuestion(question.id)">Edit</button>
+                                                <button type="button" class="btn btn-outline-danger"
+                                                        (click)="deleteQuestion(question.id)">X</button>
                                         </td>
                                 </tr>
                         </table>
                 </section>
         </div>
-
 </ng-sidebar-container>
 <!-- content -->
