--- a/src/app/layout/question/question-edit/question-edit.component.scss
+++ b/src/app/layout/question/question-edit/question-edit.component.scss
@@ -1,17 +1,9 @@
-mat-chip{
-    background: grey;
-}
 
-.myRemove{
-    margin-bottom: 7px;
-    padding-left: 7px;
-}
 
-/* 
-.chip-list {
-    width: 100%;
-  } */
-
+.myRemove:hover {
+    background-color:rgb(110, 198, 201)!important;
+    //color: white;
+    }
 
 
 .createButton {
