--- a/src/app/layout/question/question-new/question-new.component.html
+++ b/src/app/layout/question/question-new/question-new.component.html
@@ -11,33 +11,31 @@
             placeholder="Question" />
         <input class="w-100 p-1 m-1" name="answer" type="text" [(ngModel)]="question.answer"
             placeholder="Expected Answer" />
+
         <select mdbInput (change)="getAttributeValues()" class="form-control" style="margin-left: 4px; margin-right: 4px;"
             [(ngModel)]="attributeOption">
-            <option value="" hidden>Select</option>
-            <option [value]="attribute.category" *ngFor="let attribute of attributes">{{attribute.category}}</option>
+            <option value="" hidden>Choose a category</option>
+            <option [value]="attributeString" *ngFor="let attributeString of attributesString">{{attributeString}}</option>
         </select>
     </div>
 
-    <div class="row">
-        <select mdbInput *ngIf="attributeOption != '' " class="form-control" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;"
+    <div class="row" *ngIf="attributeOption != '' ">
+        <select mdbInput class="form-control" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;"
             [(ngModel)]="attributeValueOption">
-            <option value="" hidden>Select</option>
-            <option [value]="attributeValueString" *ngFor="let attributeValueString of attributeValuesString">{{attributeValueString}}
+            <option value="" hidden>Choose a option</option>
+            <option [value]="filteredValue.id" *ngFor="let filteredValue of filteredValues">{{filteredValue.value}}
             </option>
         </select>
-        <button *ngIf="attributeValueOption != '' " (click)="addAttributeValue(attributeValueOption)" style="margin-top: 3px; margin-bottom: 4px; background-color: rgb(0, 0, 120); border-radius: 20%; color: rgb(248, 248, 248);"> + </button>
+        <button *ngIf="attributeValueOption != '' " (click)="addAttributeValue(attributeValueOption)"  style="margin-top: 3px; margin-bottom: 4px; background-color: cadetblue; border-radius: .25rem; color: black"> + </button>
     </div>
 
 
-    <mat-form-field class="chip-list">
-        <mat-chip-list #chipList aria-label="Fruit selection">
-            <mat-chip *ngFor="let selectedValueString of selectedValuesString" [selectable]="selectable" [removable]="removable"
-                (removed)="remove(selectedValueString)">
-                {{selectedValueString}}
-                <mat-icon class="myRemove" matChipRemove *ngIf="removable">x</mat-icon>
-            </mat-chip>
-        </mat-chip-list>
-    </mat-form-field>
+    <div class="my-chip-list">
+        <label *ngFor="let selectedValueString of selectedValuesString" style="background-color: cadetblue; border-radius: 1rem; padding-top: 3px; padding-left: 6px; padding-right: 5px; padding-bottom: 3px; margin: 2px">
+            {{selectedValueString}}
+            <button class="myRemove"  (click)="remove(selectedValueString)" style="border-radius: 1rem; border-color: cadetblue; background-color:cadetblue; font-size: 15px;">x</button>
+        </label>
+    </div>
 
 </div>
 <div class="modal-footer">
