--- a/src/app/layout/question/question-new/question-new.component.scss
+++ b/src/app/layout/question/question-new/question-new.component.scss
@@ -1,18 +1,7 @@
-mat-chip{
-    background: grey;
-}
-
-.myRemove{
-    margin-bottom: 7px;
-    padding-left: 7px;
-}
-
-/* 
-.chip-list {
-    width: 100%;
-  } */
-
-
+.myRemove:hover {
+    background-color:rgb(110, 198, 201)!important;
+    //color: white;
+    }
 
 .createButton {
     border-radius: 60px;
@@ -24,9 +13,9 @@ mat-chip{
     padding: 10px;
     padding-left: 30px;
     padding-right: 30px;
-    outline: none;
-    
+    outline: none;  
 }
+
 .createButton::selection{
     background-color: transparent;
 }
@@ -35,9 +24,8 @@ mat-chip{
     cursor: pointer;
     display: inline-block;
     position: relative;
-    transition: 0.5s;
-    
-  }
+    transition: 0.5s;    
+}
   
 .createButton:hover {
     background-color: rgb(0, 0, 120);
