Sidebar now properly filters

--- a/src/app/layout/question/question-new/question-new.component.html
+++ b/src/app/layout/question/question-new/question-new.component.html
@@ -6,21 +6,24 @@
 </div>
 <div class="modal-body">
 
-    <div class="row">
-        <input class="w-100 p-1 m-1" name="question" type="text" [(ngModel)]="question.question"
-            placeholder="Question" />
-        <input class="w-100 p-1 m-1" name="answer" type="text" [(ngModel)]="question.answer"
-            placeholder="Expected Answer" />
-
-        <select mdbInput (change)="getAttributeValues()" class="form-control" style="margin-left: 4px; margin-right: 4px;"
-            [(ngModel)]="attributeOption">
-            <option value="" hidden>Choose a category</option>
-            <option [value]="attributeString" *ngFor="let attributeString of attributesString">{{attributeString}}</option>
-        </select>
-    </div>
+        <div class="row">
+                <label for="question" style="margin-bottom: 0px; margin-left: 4px;">Question</label>
+                <input id="question" class="w-100 p-1 m-1" name="question" type="text" [(ngModel)]="question.question" placeholder="Write question"/>
+        
+                <label for="answer" style="margin-bottom: 0px; margin-left: 4px;">Expected Answer</label>    
+                <input id="answer" class="w-100 p-1 m-1" name="answer" type="text" [(ngModel)]="question.answer" placeholder="Write expected answer"/>
+        
+                <label for="categories" style="margin-bottom: 0px; margin-left: 4px;">Categories</label> 
+                <select id="categories" *ngIf="!empty" (change)="getAttributeValues()" class="form-control"
+                    style="margin-left: 4px; margin-right: 4px;" [(ngModel)]="attributeOption">
+                    <option value="" *ngIf="attributeOption == ''">Choose a category</option>
+                    <option [value]="attributeString" *ngFor="let attributeString of attributesString">{{attributeString}}
+                    </option>
+                </select>
+            </div>
 
     <div class="row" *ngIf="attributeOption != '' ">
-        <select mdbInput class="form-control" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;"
+        <select class="form-control" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;"
             [(ngModel)]="attributeValueOption">
             <option value="" hidden>Choose a option</option>
             <option [value]="filteredValue.id" *ngFor="let filteredValue of filteredValues">{{filteredValue.value}}
@@ -37,8 +40,10 @@
         </label>
     </div>
 
+    <label for="" *ngIf="empty" style="font-size: 12px;">  (All categories are defined)</label>
+
 </div>
 <div class="modal-footer">
-    
+    <label for="" *ngIf="missingAttributes">Define all categories</label>
     <button type="button" class="createButton" (click)="create()">Create</button>
 </div>
