--- a/src/app/layout/question/question-edit/question-edit.component.html
+++ b/src/app/layout/question/question-edit/question-edit.component.html
@@ -6,8 +6,10 @@
 </div>
 <div class="modal-body">
     <div class="row">
+        <label class="font-weight-bold text-center mt-2">Question:</label>
         <input class="w-100 p-1 m-1" name="question" type="text" [(ngModel)]="question.question"
             placeholder="Question" />
+            <label class="font-weight-bold text-center mt-2">Expected Answer:</label>
         <input class="w-100 p-1 m-1" name="answer" type="text" [(ngModel)]="question.answer"
             placeholder="Expected Answer" />
             
