--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,4 +1,18 @@
-<app-header></app-header>
-<router-outlet> </router-outlet>
+
+
+
+
+<app-header>
+   
+
+</app-header>
+
+
+<router-outlet>
+    
+
+
+
+</router-outlet>
 
 <!-- <app-sidenav></app-sidenav> -->
