--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -13,8 +13,9 @@ h3{
 }
 
 body {
-  background-image: url(https://media1.giphy.com/media/l4XfgLyXAnyzCh7vfY/giphy.gif?cid=790b76111da34d72cf42191b1a37dd711077bfa1441a95b&rid=giphy.gif);
-
+  background-image: url(https://www.criticaltechworks.com/static/images/imagem_banner_new.png);
+  background-color: rgb(0, 0, 22) !important;
+  object-fit: cover;
   background-size: cover;
   background-repeat: no-repeat;
   font-family: 'Roboto', sans-serif;
