--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,6 @@
+
+
+
 <div class="login-wrapper" >
   
   <mat-card class="box">
@@ -25,5 +28,17 @@
     </form>
   </mat-card>
   
+
+</div>
+<br>
+<div class= "frase">
+
+  <p>Be part of this <b>future in <br>motion<br>
+  </b> 
+</p>
+
 </div>
 
+<div>
+  <img src="https://www.criticaltechworks.com/static/images/logo_vectorial_stage2.svg" class="criticalLogo">
+</div>
