--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -1,5 +1,4 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <ng-sidebar-container style="height: 100vh;">
 
@@ -9,7 +8,8 @@ rel="stylesheet">
                 <div class="selectors container">
                         <div *ngFor="let attribute of attributes; let i = index">
                                 <label class="font-weight-bold text-center mt-2">{{attribute.category}}</label>
-                                <select class="form-control w-100" [(ngModel)]="valueOption[attribute.category]" (change)= "filterQuestions()">
+                                <select class="form-control w-100" [(ngModel)]="valueOption[attribute.category]"
+                                        (change)="filterQuestions()">
                                         <option value="" selected>Any {{attribute.category}}</option>
                                         <option [value]="filteredValue" *ngFor="let filteredValue of filteredValues[i]">
                                                 {{filteredValue}}
@@ -46,7 +46,8 @@ rel="stylesheet">
                                 <tr *ngFor="let question of displayedQuestions">
                                         <td *ngFor="let col of indexTable; let i = index">
                                                 <ng-container *ngIf="i==0">
-                                                        <span *ngFor="let attr of question[col]">{{attr.value}}<br></span>
+                                                        <span
+                                                                *ngFor="let attr of question[col]">{{attr.value}}<br></span>
                                                 </ng-container>
                                                 <ng-container *ngIf="i>0">
                                                         {{question[col]}}
