--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -5,9 +5,14 @@
         <!-- A sidebar -->
         <ng-sidebar [(opened)]="_opened" position="left" [mode]="'push'">
                 <h3>Filter By:</h3>
-                <div class="selectors container">
+                <div>
+                        <label style="color: white; margin-left: 30px; margin-right: 5px; padding: 0%;"><strong>Add category</strong></label>
+                        <button style="margin-top: 3px; margin-bottom: 4px; background-color: cadetblue; border-radius: .25rem; color: black"
+                        (click)="addCategory()">+</button>
+                </div>
+                <div class="selectors container" style="padding-top: 0px">
                         <div *ngFor="let attribute of attributes; let i = index">
-                                <label class="font-weight-bold text-center mt-2">{{attribute.category}}</label>
+                                <label class="font-weight-bold text-center mt-3 mb-0">{{attribute.category}}</label>
                                 <select class="form-control w-100" [(ngModel)]="valueOption[attribute.category]"
                                         (change)="filterQuestions()">
                                         <option value="" selected>Any {{attribute.category}}</option>
