--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -9,7 +9,7 @@
  
  body {
    background-color: rgb(0, 0, 22);
-   //background-image: url(https://www.shardagroup.com/images/shrda.gif);
+   background-image: url(https://www.criticaltechworks.com/static/images/imagem_banner_new.png);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
