--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,44 +1,39 @@
+<div class="frase">
 
+  <p>Be part of this <b>future in <br>motion<br>
+    </b>
+  </p>
 
+</div>
+<div class="login-wrapper">
 
-<div class="login-wrapper" >
-  
   <mat-card class="box">
     <mat-card-header>
-      <mat-card-title class="card-title mb-2">
+      <mat-card-title class="card-title">
         Log in to your account
       </mat-card-title>
     </mat-card-header>
-    
+
     <form class="example-form">
       <mat-card-content>
 
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100 mt-2 myinput" name="email" type="email" [(ngModel)]="account.email" placeholder="Email" />
+          <input mdbInput class="form-control w-100 mt-2 myinput" name="email" type="email" [(ngModel)]="account.email"
+            placeholder="Email" />
         </mat-form-field>
-        
+
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100 mt-2 myinput" name="password" type="password" [(ngModel)]="account.password" placeholder="Password" />
+          <input mdbInput class="form-control w-100 mt-2 myinput" name="password" type="password"
+            [(ngModel)]="account.password" placeholder="Password" />
         </mat-form-field>
 
       </mat-card-content>
-      
+
       <p *ngIf="error">{{this.msg}}</p>
-      <button type="button" class="loginButton btn btn-outline-info w-100 mt-2" (click)="login()"><span>Login</span></button>
+      <button type="button" class="loginButton btn btn-outline-info w-100 mt-2"
+        (click)="login()"><span>Login</span></button>
     </form>
   </mat-card>
-  
 
-</div>
-<br>
-<div class= "frase">
 
-  <p>Be part of this <b>future in <br>motion<br>
-  </b> 
-</p>
-
-</div>
-
-<div>
-  <img src="https://www.criticaltechworks.com/static/images/logo_vectorial_stage2.svg" class="criticalLogo">
 </div>
