--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -26,7 +26,7 @@
     
   }
   
-.registerButton:hover {
+.registerButton:hover:enabled {
     background-color: rgb(0, 0, 120);
     color: rgb(0, 255, 251);
 }
