--- a/src/app/layout/question/attribute-new/attribute-new.component.html
+++ b/src/app/layout/question/attribute-new/attribute-new.component.html
@@ -10,5 +10,5 @@
     <input id="attribute" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category">
 
 <div class="modal-footer">
-    <button type="button" class="createButton" (click)="create()">Create</button>
+    <button class="createCategoryButton" (click)="create()">Create</button>
 </div>
