--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@ rel="stylesheet">
       <div *ngIf="accountApi.isAdmin()" class="btn">
         <button class="qaButton" routerLink="layout/question">Questions</button>
         <button class="qaButton" routerLink="layout/interview">Interview</button>
-        <button class="qaButton" routerLink="layout/account">Accounts</button>
+        <button class="qaButton" routerLink="layout/account">Users</button>
       </div>
 
       <span class="fontsize navbar-text  text-white">
