--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -1,13 +1,15 @@
 <section class="container">
 
-        <h2 class="text-white" translate>New Account
+        <h2 class="text-white" translate>Users
                 <!-- <button type="button" class="btn btn-primary mt-2" routerLink="/register" routerLinkActive="active">
                         <fa-icon [icon]="iconNew"></fa-icon>
                 </button> -->
-                <button type="button" class="accountButton" (click)="openCreateModal()">
-                        <fa-icon [icon]="iconNew"></fa-icon>
-                </button>
         </h2>
+
+        <button class="userButton" (click)="openCreateModal()">Add New User
+                <i class="addUserIcon material-icons">add_circle</i>
+        </button>
+
         <br>
         <!-- <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter"> -->
 
