--- a/src/app/layout/question/question.component.scss
+++ b/src/app/layout/question/question.component.scss
@@ -65,13 +65,140 @@ table tr:first-child th:first-child {
     color: white;
 }
 
+
+// add new quesion CARALHO
+
 .QuestButton{
-    background-image: linear-gradient(to right, rgb(0, 255, 251) , rgb(13, 30, 207));
     border-radius: 60px;
     border: 0px;
-    size: 5px;
+    background-color: transparent;
+    color: rgb(0, 255, 251);
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 10px;
+    padding-right: 30px;
+    outline: none;
+    justify-content: right;
+    padding-left: 80%;
+
+} 
+
+    .QuestButton::selection{
+        background-color: transparent;
+    }
+    
+    .QuestButton span {
+        cursor: pointer;
+        display: inline-block;
+        position: relative;
+        transition: 0.5s;
+        
+      }
+      
+    .QuestButton:hover {
+        background-color:transparent;
+        color: rgb(255, 255, 255);
+    }
+    
+    .QuestButton span:after {
+        content: '\00bb';
+        position: absolute;
+        opacity: 0;
+        top: 0;
+        right: -20px;
+        transition: 0.5s;
+    }
+    
+    .QuestButton:hover span {
+        padding-right: 25px;
+    }
+    
+    .QuestButton:hover span:after {
+        opacity: 1;
+        right: 0;
+    }
+
+    .addQuestIcon{
+        font-size: 1rem;
+        position: absolute;
+        padding-left: 8px;
+        padding-top: 5px;
+    }
+
+    
+
+
+
+    /*background-image: linear-gradient(to right, rgb(0, 255, 251) , rgb(13, 30, 207));
+    border-radius: 60px;
+    border: 0px;
+    size: 5px;*/
    
+
+// add category complex
+
+.addCategory{
+
+    border-radius: 60px;
+    border: 0px;
+    background-color: rgb(0, 0, 22);
+    color: rgb(0, 255, 251);
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    outline: none;
+    margin-right: -15px;
+    margin-left: -15px;
+    position: relative;
+    
 }
+
+.addCategory::selection{
+    background-color: transparent;
+}
+
+.addCategory span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 10s;
+    
+  }
+  
+.addCategory:hover {
+    background-color: rgb(0, 0, 22);
+    color: rgb(255, 255, 255);
+}
+
+.addCategory span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 10s;
+}
+
+.addCategory:hover span {
+    padding-right: 25px;
+}
+
+.addCategory:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+.addCategoryIcon{
+
+    font-size: 1rem;
+    position: absolute;
+    padding-left: 8px;
+    padding-top: 5px;
+}
+
+// pdf button complex
 
 .pdfButton {
     border-radius: 60px;
