--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -6,9 +6,10 @@
         <ng-sidebar [(opened)]="_opened" position="left" [mode]="'push'">
                 <h3>Filter By:</h3>
                 <div>
-                        <label style="color: white; margin-left: 30px; margin-right: 5px; padding: 0%;"><strong>Add Category</strong></label>
+                        <label style="color: white; margin-left: 30px; margin-right: 5px; padding: 0%;"><strong>Add
+                                        Category</strong></label>
                         <button style="margin-top: 3px; margin-bottom: 4px; background-color: cadetblue; border-radius: .25rem; color: black"
-                        (click)="addCategory()">+</button>
+                                (click)="addCategory()">+</button>
                 </div>
                 <div class="selectors container" style="padding-top: 0px; width: 200px;">
                         <div *ngFor="let attribute of attributes; let i = index">
@@ -52,7 +53,7 @@
                                         <td *ngFor="let col of indexTable; let i = index">
                                                 <ng-container *ngIf="i==0">
                                                         <label class="checkbox-label">
-                                                                <input type="checkbox" />
+                                                                <input type="checkbox" (click)="questionCheck(question.id)"/>
                                                                 <span class="checkbox-custom"></span>
                                                         </label>
                                                 </ng-container>
