--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -17,6 +17,14 @@
    font-family: 'Roboto', sans-serif;
  }
 
+.erro {
+  font-family: Mark-Bold, sans-serif;
+  font-size: 15px;
+  font-weight: lighter;
+  color: rgb(0, 0, 120);
+  text-align: center;
+}
+
  p {
   font-family: Mark-Bold, sans-serif;
   font-size: 50px;
