validaçoes login,questions,accounts

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -79,7 +79,8 @@
 
 
 <div  *ngIf="password.errors && password.errors.pattern">
-  Password is invalid
+  Password is invalid<br>
+  Minimum 4 characters
 </div>
 </div>
   <label class="font-weight-bold text-center mt-2">Choose a role:</label>
