--- a/src/app/layout/account/account-edit/account-edit.component.html
+++ b/src/app/layout/account/account-edit/account-edit.component.html
@@ -6,12 +6,42 @@
   </div>
   <div class="modal-body">
     <label class="font-weight-bold text-center mt-2">Edit Name:</label>
-    <input class="w-100 p-1 m-1" name="name" type="name" [(ngModel)]="account.name">
+    <input class="w-100 p-1 m-1" required pattern="[A-z -]+$" #name="ngModel" name="name" type="name" [(ngModel)]="account.name" placeholder="Name">
+
+    <div class="text-danger" [hidden]="name.valid || name.untouched">
+      
+      <div  *ngIf="name.errors && name.errors.required">
+          Name is required
+      </div>
+      <div  *ngIf="name.errors && name.errors.pattern">
+        Name is invalid
+    </div>
+    </div>
     <label class="font-weight-bold text-center mt-2">Edit Email:</label>
-    <input class="w-100 p-1 m-1" name="email" type="email" [(ngModel)]="account.email">
+    <input class="w-100 p-1 m-1" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" #email="ngModel" name="email" email type="email" [(ngModel)]="account.email" placeholder="Email">
+  <div class="text-danger" [hidden]="email.valid || email.untouched">
+    <div  *ngIf="email.errors && email.errors.required">
+        Email is required
+    </div>
+    <div  *ngIf="email.errors && email.errors.pattern">
+        Email is invalid
+    </div>
+  </div>
     <label class="font-weight-bold text-center mt-2">Password:</label>
-    <input [disabled]="!editPassword" class="w-90 p-1 m-1" name="password" type="password" [(ngModel)]="account.hashcode" >
+    <input [disabled]="!editPassword" required pattern="(.{4,}$)" #password="ngModel" class="w-90 p-1 m-1" name="password" type="password" [(ngModel)]="account.hashcode" placeholder="Password" >
     <!-- <i class="fa fa-edit"></i> -->
+    <div class="text-danger" [hidden]="password.valid || password.untouched">
+
+      <div  *ngIf="password.errors && password.errors.required">
+        Password is required
+    </div>
+    
+    
+    <div  *ngIf="password.errors && password.errors.pattern">
+      Password is invalid<br>
+      Minimum 4 characters
+    </div>
+    </div>
     <button class="editButton" (click)="editPassword = true">
       <span>edit pass</span></button>
     <label class="font-weight-bold text-center mt-2">Choose a role:</label>
