--- a/src/app/layout/question/question-edit/question-edit.component.html
+++ b/src/app/layout/question/question-edit/question-edit.component.html
@@ -8,10 +8,20 @@
 
     <div class="row">
         <label for="question" style="margin-bottom: 0px; margin-left: 4px;">Question</label>
-        <input id="question" class="w-100 p-1 m-1" name="question" type="text" [(ngModel)]="question.question"/>
+        <input id="question" class="w-100 p-1 m-1" required pattern="[A-z ?]+$" #question="ngModel" name="question" type="text" [(ngModel)]="question.question" placeholder="Write question"/>
+                
 
+        <div class="text-danger" [hidden]="question.valid || question.untouched">
+          
+          <div  *ngIf="question.errors && question.errors.required">
+              Question is required <br>
+          </div>
+          <div  *ngIf="question.errors && question.errors.pattern">
+            Question is invalid <br>
+        </div>
+        </div>
         <label for="answer" style="margin-bottom: 0px; margin-left: 4px;">Expected Answer</label>    
-        <input id="answer" class="w-100 p-1 m-1" name="answer" type="text" [(ngModel)]="question.answer"/>
+        <input id="answer" class="w-100 p-1 m-1" name="answer" type="text" [(ngModel)]="question.answer" placeholder="Expected Answer"/>
 
         <label for="categories" style="margin-bottom: 0px; margin-left: 4px;">Categories</label> 
         <select id="categories" *ngIf="!empty" (change)="getAttributeValues()" class="form-control"
