--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,13 +18,34 @@
       <mat-card-content>
 
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100 mt-2 myinput" name="email" type="email" [(ngModel)]="account.email"
+          <input mdbInput class="form-control w-100 mt-2 myinput" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" #email="ngModel"  name="email" type="email" [(ngModel)]="account.email"
             placeholder="Email" />
+
+  <div class="text-danger" [hidden]="email.valid || email.untouched">
+    <div  *ngIf="email.errors && email.errors.required">
+        Email is required
+    </div>
+    <div  *ngIf="email.errors && email.errors.pattern">
+        Email is invalid
+    </div>
+  </div>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <input mdbInput class="form-control w-100 mt-2 myinput" name="password" type="password"
+          <input mdbInput class="form-control w-100 mt-2 myinput" required pattern="(.{4,}$)" #password="ngModel" name="password" type="password"
             [(ngModel)]="account.password" placeholder="Password" />
+
+            <div class="text-danger" [hidden]="password.valid || password.untouched">
+          
+            <div  *ngIf="password.errors && password.errors.required">
+              Password is required
+          </div>
+          
+          
+          <div  *ngIf="password.errors && password.errors.pattern">
+            Password is invalid<br>
+          </div>
+          </div>
         </mat-form-field>
 
       </mat-card-content>
