--- a/src/app/layout/account/account.component.scss
+++ b/src/app/layout/account/account.component.scss
@@ -83,7 +83,7 @@ table tr:first-child th:first-child {
     padding-right: 30px;
     outline: none;
     justify-content: right;
-    padding-left: 82%;
+    padding-left: 84%;
 
 } 
 
@@ -122,9 +122,9 @@ table tr:first-child th:first-child {
         right: 0;
     }
 
-    .userUserIcon{
+    .addUserIcon{
         font-size: 1rem;
         position: absolute;
         padding-left: 8px;
-        padding-top: 10px;
+        padding-top: 4px;
     }
