--- a/src/app/layout/question/attribute-edit/attribute-edit.component.html
+++ b/src/app/layout/question/attribute-edit/attribute-edit.component.html
@@ -22,5 +22,5 @@
     </div>
 
 <div class="modal-footer">
-    <button type="button" class="editButton" (click)="edit()">Edit</button>
+    <button type="button" class="editCategoryButton" (click)="edit()">Edit</button>
 </div>
