--- a/src/app/layout/question/question-edit/question-edit.component.html
+++ b/src/app/layout/question/question-edit/question-edit.component.html
@@ -44,10 +44,10 @@
         </label>
     </div>
 
-    <label for="" *ngIf="empty" style="font-size: 12px;">  (All categories are defined)</label> 
+    <label for="" *ngIf="empty" style="font-size: 12px;"> (All categories are defined)</label> 
 
 </div>
 
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-info" (click)="editQuestion()">Edit</button>
+    <button type="button" class="editQuestionButton" (click)="editQuestion()">Edit</button>
 </div>
