--- a/src/app/layout/question/question-edit/question-edit.component.scss
+++ b/src/app/layout/question/question-edit/question-edit.component.scss
@@ -53,3 +53,53 @@
     opacity: 1;
     right: 0;
 }
+
+
+// edit das questions
+
+.editQuestionButton {
+    border-radius: 60px;
+    border: 0px;
+    background-color: rgb(2, 238, 234);
+    color: rgb(0, 0, 120);
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    outline: none;  
+}
+
+.editQuestionButton::selection{
+    background-color: transparent;
+}
+
+.editQuestionButton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;    
+}
+  
+.editQuestionButton:hover {
+    background-color: rgb(0, 0, 120);
+    color: rgb(0, 255, 251);
+}
+
+.editQuestionButton span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.editQuestionButton:hover span {
+    padding-right: 25px;
+}
+
+.editQuestionButton:hover span:after {
+    opacity: 1;
+    right: 0;
+}
