--- a/src/app/layout/question/question.component.scss
+++ b/src/app/layout/question/question.component.scss
@@ -335,7 +335,68 @@ table tr:first-child th:first-child {
   
     /* Support for IE. */
     font-feature-settings: 'liga';
-  
-   
   }
 
+// caneta para editar 
+
+
+.editPencilButton{
+
+    border-radius: 60px;
+    border: 0px;
+    background-color:transparent;
+    color: rgb(0, 255, 251);
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    outline: none;
+    margin-right: -15px;
+    margin-left: -15px;
+    position: relative;
+    
+}
+
+.editPencilButton::selection{
+    background-color: transparent;
+}
+
+.editPencilButton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 10s;
+    
+  }
+  
+  .editPencilButton:hover {
+    background-color:transparent;
+    color: rgb(255, 255, 255);
+}
+
+.editPencilButton span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 10s;
+}
+
+.editPencilButton:hover span {
+    padding-right: 25px;
+}
+
+.editPencilButton:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+.editPencilIcon{
+
+    font-size: 1rem;
+    position: absolute;
+    margin-left: -10px;
+    margin-top: -14px;
+}
