--- a/src/app/layout/question/generate-interview/generate-interview.component.html
+++ b/src/app/layout/question/generate-interview/generate-interview.component.html
@@ -5,20 +5,51 @@
     </button>
 </div>
 <div class="modal-body">
-    <form>
+    
         <label for="form-row">Candidate Name:</label>
         <div id="form-row" class="form-row mb-1">
             <div class="col">
-                <input class="form-control p-1 m-1" name="firstname" type="text" placeholder="First Name"/>
+                <input class="form-control p-1 m-1" name="firstname" type="text" placeholder="First Name" />
             </div>
             <div class="col">
-                <input class=" form-control p-1 m-1" name="lastname" type="text" placeholder="Last Name"/>
+                <input class=" form-control p-1 m-1" name="lastname" type="text" placeholder="Last Name" />
             </div>
         </div>
-        <label for="email">Candidate Email:</label>
+        <label for="role">Candidate Role:</label>
+        <select class="form-control" [(ngModel)]="Role.value">
+            <option value="" selected></option>
+            <option [value]="col" *ngFor="let col of Roles">
+                {{col.value}}
+            </option>
+        </select>
+        <label class="form-row mt-1" for="email">Candidate Email:</label>
         <input id="email" type="text" class="form-control w-100 p-1 m-1" type="email" placeholder="email@address.com">
-    </form>
-</div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-outline-info" routerLink="layout/interview" (click)="createInterview().hide()">Create Interview</button>
-</div>
+    
+    <!-- Carousel -->
+    <label for="carouselExampleIndicators" style="text-align: center;">Questions:</label>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" [ngClass]="activeImg == 0 ? 'active' : ''"></li>
+            <li data-target="#carouselExampleIndicators" [ngClass]="activeImg == 1 ? 'active' : ''"></li>
+        </ol>
+        <div class="carousel-inner myCenter">
+            <div class="carousel-item" [ngClass]="activeImg == 0 ? 'active' : ''">
+                <span>AAAAAAAAAAAAAAA</span>
+            </div>
+            <div class="carousel-item" [ngClass]="activeImg == 1 ? 'active' : ''">
+                <span>BBBBBBB</span>
+            </div>
+        </div>
+        <a class="carousel-control-prev" (click)="prevSlide()" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" (click)="nextSlide()" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-info" routerLink="layout/interview"
+            (click)="createInterview()">Create Interview</button>
+    </div>
